--- a/ShoppingNightMongo/Views/Products/ProductList.cshtml
+++ b/ShoppingNightMongo/Views/Products/ProductList.cshtml
@@ -1,15 +1,34 @@
-﻿
+﻿@model List<ShoppingNightMongo.Dtos.ProductDtos.ResultProductDto>
 @{
     Layout = null;
 }
 
-<!DOCTYPE html>
+<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>ProductList</title>
-</head>
-<body>
-</body>
-</html>
+<div class="container">
+    <br /><br />
+    <table class="table table-hover">
+        <tr>
+            <th>#</th>
+            <th>Ürün Adı</th>
+            <th>Ürün Fiyatı</th>
+            <th>Ürün Stok Sayısı</th>
+            <th>Ürün Kategori</th>
+            <th>Sil</th>
+            <th>Güncelle</th>
+        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.ProductId</td>
+                <td>@item.ProductName</td>
+                <td>@item.ProductPrice</td>
+                <td>@item.StockCount</td>
+                <td>@item.CategoryId</td>
+                <td><a href="/Products/DeleteProduct/@item.ProductId" class="btn btn-danger">Sil</a></td>
+                <td><a href="/Products/UpdateProduct/@item.ProductId" class="btn btn-success">Güncelle</a></td>
+            </tr>
+        }
+    </table>
+    <a href="/Products/CreateProduct/" class="btn btn-primary">Yeni Ürün Girişi</a>
+</div>
