--- a/ShoppingNightMongo/Views/Products/UpdateProduct.cshtml
+++ b/ShoppingNightMongo/Views/Products/UpdateProduct.cshtml
@@ -1,15 +1,31 @@
-﻿
+﻿@model ShoppingNightMongo.Dtos.ProductDtos.GetProductByIdDto
 @{
     Layout = null;
 }
 
-<!DOCTYPE html>
+<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>UpdateProduct</title>
-</head>
-<body>
-</body>
-</html>
+<div class="container">
+    <br /><br />
+    <form method="post">
+        <input type="hidden" asp-for="ProductId" />
+        <label>Ürün Adı</label>
+        <input type="text" asp-for="ProductName" class="form-control" />
+        <br />
+        <label>Ürün Fiyatı</label>
+        <input type="text" asp-for="ProductPrice" class="form-control" />
+        <br />
+        <label>Ürün Görseli</label>
+        <input type="text" asp-for="ImageUrl" class="form-control" />
+        <br />
+        <label>Ürün Stok Sayısı</label>
+        <input type="text" asp-for="StockCount" class="form-control" />
+        <br />
+        <label>Ürün Kategorisi</label>
+        <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.v">
+            <option value="">-- Kategori Seçiniz --</option>
+        </select>
+        <br />
+        <button class="btn btn-info"> Ürünü Güncelle</button>
+    </form>
+</div>
